# animeinrussia-parser

./: README.md
animeinrussia_api/: .env.example  .gitignore  emacs-rest.http  manage.py  pyproject.toml
animeinrussia_api/air/: apps.py  models.py  serializers.py  show.py  tasks.py  tg.py  urls.py  views.py
animeinrussia_api/air/migrations/: 0001_initial.py  0002_show_sent_at.py  0003_alter_show_description_alter_show_image_url_and_more.py  0004_show_source_url.py
animeinrussia_api/animeinrussia/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
animeinrussia_parser/: .env.example  .gitignore  pyproject.toml  scrapy.cfg
animeinrussia_parser/animeinrussia_parser/: db.py  items.py  middlewares.py  pipelines.py  settings.py  test.py
animeinrussia_parser/animeinrussia_parser/spiders/: main.py
kubernetes/: example-secrets.yml  kube-deploy.yml
